[package]
name = "arch_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
scraper = "0.15.0"
serde = { version = "1.0.154", features = ["derive"] }
